# jacaranda-pihole

./: .envrc  .envrc.secrets.example  .gitignore  .gitmodules  .mise.local.toml.example  CLAUDE.md  Makefile  justfile  mise.toml  prod.just  pyproject.toml  test.just
ansible/: .gitignore  Makefile  ansible.cfg  justfile  versions.yaml
ansible/files/: configure-firewall.sh  docker-compose.yaml
ansible/group_vars/: all.yml  pihole_lxc.yaml  pihole_lxc.yml
ansible/host_vars/: dns-restricted-primary.yml  dns-restricted-secondary.yml  dns-standard-primary.yml  dns-standard-secondary.yml  dns-test.yml  pihole-restricted-22.yml  pihole-restricted-23.yml  pihole-standard-20.yml  pihole-standard-21.yml
ansible/inventory/: prod-bootstrap.yaml  prod.yml  test.yml
ansible/playbooks/: cloudflared.yml  nebula-sync.yaml  nebula-sync.yml  pihole-cloudflared.yaml  pihole-cloudflared.yml  pihole-dns-self.yaml  pihole-dns-self.yml  pihole-lxc.yaml  pihole-lxc.yml  pihole-upgrade.yml  ssh-ca.yaml
ansible/templates/: 99-bind-interface.conf.j2  cloudflared.service.j2  cloudflared.yml.j2  nebula-sync.env.j2  setupVars.conf.j2
scripts/: op-connect.sh  op-read
terraform/: main.tf  outputs.tf  variables.tf
terraform/envs/prod/: .terraform.lock.hcl  Makefile  backend.tf  encryption.tf  main.tf  terraform.tfstate
terraform/envs/test/: .terraform.lock.hcl  Makefile  backend.tf  main.tf  terraform.tfstate
